# product-monitor

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  product-monitor-config.example.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: live-check.yml  tests.yml
product_monitor/: __init__.py  config.py  email_notifier.py  health_check.py  main.py  models.py  monitor.py
product_monitor/scrapers/: __init__.py  base.py  hardverapro.py  jofogas.py  moly.py  vatera.py
scripts/: live_smoke_check.py
tests/: test_health_check.py  test_notification.py  test_parsing.py  test_persistence.py  test_scrapers.py
